<resources>
    <string name="app_name">Fallout</string>

    <string name="menu_home">Home</string>
    <string name="character">Character</string>
    <string name="combat">Combat</string>
    <string name="skills">Skills</string>
    <string name="perks">Perks</string>
    <string name="remaining_perks">Other Perks</string>
    <string name="effects">Effects</string>
    <string name="equipment">Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="encounter">Encounter</string>
    <string name="loot">Loot</string>
    <string name="actions">Actions</string>

    <string name="filler">filler</string>

    <string name="equip">Equip</string>
    <string name="unequip">Unequip</string>
    <string name="drop">Drop</string>
    <string name="reload">Reload</string>

    <string name="armor">Armor</string>
    <string name="weapon">Weapon</string>
    <string name="weapons">Weapons</string>
    <string name="quick_items">Quick Items</string>

    <!-- Attributes -->
    <string name="strength">Strength</string>
    <string name="endurance">Endurance</string>
    <string name="agility">Agility</string>
    <string name="resolve">Resolve</string>
    <string name="intelligence">Intelligence</string>
    <string name="morale">Morale</string>

    <string name="attributes">Attributes</string>
    <string name="primary_attributes">Primary Attributes</string>
    <string name="secondary_attributes">Secondary Attributes</string>
    <string name="capacity_attributes">Capacity Attributes</string>

    <string name="ranks">Ranks</string>

    <string name="remaining_exp">Remaining Skill Points:</string>

    <string name="equipped_items">Equipped Items</string>

    <string name="perform_action">Perform Action</string>
    <string name="current_action">Current Action:</string>
    <string name="remaining_ap">Remaining AP:</string>
    <string name="end_turn">End Turn</string>

    <string name="remaining_rounds">Duration: </string>
    <string name="current_weight" formatted="false">Weight: %d/%d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="button_load_character">Load Character</string>
    <string name="available_characters">Available Characters</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
