<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_character" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/character" />
        <item android:id="@+id/nav_perks" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/perks" />
        <item android:id="@+id/nav_equipment" android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/equipment" />
        <item android:id="@+id/nav_inventory" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/inventory" />
        <item android:id="@+id/nav_loot" android:icon="@android:drawable/ic_lock_idle_charging"
            android:title="@string/loot" />
        <item android:id="@+id/nav_actions" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/actions" />
    </group>

</menu>