<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.erhodes.fallout.EquipmentFragment">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/armor" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/armorView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Item Name"
            android:id="@+id/armorNameView" />

        <TextView
            android:id="@+id/armorDescView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item Description"
            />
    </LinearLayout>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/weapon" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weaponView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Item Name"
            android:id="@+id/weaponNameView" />

        <TextView
            android:id="@+id/weaponDescView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item Description"
            />
    </LinearLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/quick_items" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quick_item_list_view" />
</LinearLayout>
